--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-player": "^2.16.0",
+    "react-router-dom": "^7.1.5",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
